--- a/grafana/provisioning/dashboards/dashboard.yml
+++ b/grafana/provisioning/dashboards/dashboard.yml
@@ -5,7 +5,9 @@ providers:
   orgId: 1
   folder: ''
   type: file
-  disableDeletion: false
+  disableDeletion: true
   editable: true
+  # <bool> allow updating provisioned dashboards from the UI
+  allowUiUpdates: true
   options:
     path: /etc/grafana/provisioning/dashboards
