--- a/grafana/provisioning/dashboards/AppGate Appliances.json
+++ b/grafana/provisioning/dashboards/AppGate Appliances.json
@@ -451,7 +451,8 @@
   "style": "dark",
   "tags": [
     "appliances",
-    "appgate"
+    "appgate",
+    "provisioned"
   ],
   "templating": {
     "list": []
