--- a/grafana/provisioning/dashboards/AppGate Details.json
+++ b/grafana/provisioning/dashboards/AppGate Details.json
@@ -707,7 +707,8 @@
     "users",
     "sessions",
     "appgate",
-    "bandwidth"
+    "bandwidth",
+    "provisioned"
   ],
   "templating": {
     "list": [
