--- a/grafana/provisioning/dashboards/dashboard.yml
+++ b/grafana/provisioning/dashboards/dashboard.yml
@@ -5,7 +5,7 @@ providers:
   orgId: 1
   folder: ''
   type: file
-  disableDeletion: true
+  disableDeletion: false
   editable: true
   # <bool> allow updating provisioned dashboards from the UI
   allowUiUpdates: true
