--- a/grafana/provisioning/dashboards/AppGate Dashoard.json
+++ b/grafana/provisioning/dashboards/AppGate Dashoard.json
@@ -1687,7 +1687,8 @@
   "style": "dark",
   "tags": [
     "appgate",
-    "dashboard"
+    "dashboard",
+    "provisioned"
   ],
   "templating": {
     "list": [
