--- a/grafana/provisioning/dashboards/AppGate Appliances.json
+++ b/grafana/provisioning/dashboards/AppGate Appliances.json
@@ -16,7 +16,8 @@
   "editable": true,
   "gnetId": null,
   "graphTooltip": 0,
-  "id": 4,
+  "id": 3,
+  "iteration": 1587541903842,
   "links": [],
   "panels": [
     {
@@ -24,8 +25,8 @@
       "datasource": null,
       "fontSize": "80%",
       "gridPos": {
-        "h": 10,
-        "w": 24,
+        "h": 8,
+        "w": 12,
         "x": 0,
         "y": 0
       },
@@ -61,23 +62,6 @@
           "unit": "short"
         },
         {
-          "alias": "",
-          "align": "auto",
-          "colorMode": null,
-          "colors": [
-            "rgba(245, 54, 54, 0.9)",
-            "rgba(237, 129, 40, 0.89)",
-            "rgba(50, 172, 45, 0.97)"
-          ],
-          "dateFormat": "YYYY-MM-DD HH:mm:ss",
-          "decimals": 2,
-          "mappingType": 1,
-          "pattern": "/Value*/",
-          "thresholds": [],
-          "type": "hidden",
-          "unit": "short"
-        },
-        {
           "alias": "Details",
           "align": "left",
           "colorMode": null,
@@ -110,45 +94,62 @@
           "thresholds": [],
           "type": "number",
           "unit": "short"
+        },
+        {
+          "alias": "Type",
+          "align": "auto",
+          "colorMode": null,
+          "colors": [
+            "rgba(245, 54, 54, 0.9)",
+            "rgba(237, 129, 40, 0.89)",
+            "rgba(50, 172, 45, 0.97)"
+          ],
+          "dateFormat": "YYYY-MM-DD HH:mm:ss",
+          "decimals": 2,
+          "mappingType": 1,
+          "pattern": "/Value*/",
+          "thresholds": [],
+          "type": "hidden",
+          "unit": "short"
         }
       ],
       "targets": [
         {
-          "expr": "sum(role_status_logforwarder{role_logforwarder=\"true\"}) by (details, appliance_name, site_id)",
+          "expr": "sum(role_status_logforwarder{role_logforwarder=\"true\", target=\"$target\"}) by (details, appliance_name, site_id)",
           "format": "table",
           "instant": true,
           "interval": "",
-          "legendFormat": "",
+          "legendFormat": "logfwd",
           "refId": "A"
         },
         {
-          "expr": "sum(role_status_controller{role_controller=\"true\"})by (details, appliance_name,site_id)",
+          "expr": "sum(role_status_controller{role_controller=\"true\", target=\"$target\"})by (details, appliance_name,site_id)",
           "format": "table",
           "instant": true,
           "interval": "",
-          "legendFormat": "",
+          "legendFormat": "ctlr",
           "refId": "B"
         },
         {
-          "expr": "sum(role_status_gateway{role_gateway=\"true\"})by (details, appliance_name, site_id)",
+          "expr": "sum(role_status_gateway{role_gateway=\"true\", target=\"$target\"})by (details, appliance_name, site_id)",
           "format": "table",
           "instant": true,
           "interval": "",
-          "legendFormat": "",
+          "legendFormat": "gw",
           "refId": "C"
         },
         {
-          "expr": "sum(role_status_logserver{role_logserver=\"true\"})by (details, appliance_name, site_id)",
+          "expr": "sum(role_status_logserver{role_logserver=\"true\", target=\"$target\"})by (details, appliance_name, site_id)",
           "format": "table",
           "instant": true,
           "interval": "",
-          "legendFormat": "",
+          "legendFormat": "log",
           "refId": "D"
         },
         {
-          "expr": "sum(role_status_iotconnector{role_iotconnector=\"true\"})by (details, appliance_name)",
+          "expr": "sum(role_status_iotconnector{role_iotconnector=\"true\", target=\"$target\"})by (details, appliance_name)",
           "interval": "",
-          "legendFormat": "",
+          "legendFormat": "iot",
           "refId": "E"
         }
       ],
@@ -156,6 +157,109 @@
       "timeShift": null,
       "title": "Appliance Details",
       "transform": "table",
+      "type": "table"
+    },
+    {
+      "columns": [],
+      "datasource": null,
+      "fontSize": "100%",
+      "gridPos": {
+        "h": 8,
+        "w": 12,
+        "x": 12,
+        "y": 0
+      },
+      "id": 12,
+      "links": [
+        {
+          "title": "",
+          "url": ""
+        }
+      ],
+      "pageSize": null,
+      "showHeader": true,
+      "sort": {
+        "col": 1,
+        "desc": true
+      },
+      "styles": [
+        {
+          "alias": "Time",
+          "align": "auto",
+          "dateFormat": "YYYY-MM-DD HH:mm:ss",
+          "pattern": "Time",
+          "type": "hidden"
+        },
+        {
+          "alias": "Version",
+          "align": "auto",
+          "colorMode": null,
+          "colors": [
+            "rgba(245, 54, 54, 0.9)",
+            "rgba(237, 129, 40, 0.89)",
+            "rgba(50, 172, 45, 0.97)"
+          ],
+          "decimals": 0,
+          "mappingType": 1,
+          "pattern": "Metric",
+          "thresholds": [],
+          "type": "string",
+          "unit": "short",
+          "valueMaps": [
+            {
+              "text": "offline n/a",
+              "value": "0"
+            }
+          ]
+        },
+        {
+          "alias": "Appliance count",
+          "align": "auto",
+          "colorMode": null,
+          "colors": [
+            "rgba(245, 54, 54, 0.9)",
+            "rgba(237, 129, 40, 0.89)",
+            "rgba(50, 172, 45, 0.97)"
+          ],
+          "dateFormat": "YYYY-MM-DD HH:mm:ss",
+          "decimals": 0,
+          "mappingType": 1,
+          "pattern": "Value",
+          "thresholds": [],
+          "type": "number",
+          "unit": "short"
+        },
+        {
+          "alias": "",
+          "align": "auto",
+          "colorMode": null,
+          "colors": [
+            "rgba(245, 54, 54, 0.9)",
+            "rgba(237, 129, 40, 0.89)",
+            "rgba(50, 172, 45, 0.97)"
+          ],
+          "dateFormat": "YYYY-MM-DD HH:mm:ss",
+          "decimals": 2,
+          "mappingType": 1,
+          "pattern": "",
+          "thresholds": [],
+          "type": "number",
+          "unit": "short"
+        }
+      ],
+      "targets": [
+        {
+          "expr": "appgate:appliance_version_count:labels_to_table{target=\"$target\"}",
+          "instant": true,
+          "interval": "",
+          "legendFormat": "{{version}}",
+          "refId": "A"
+        }
+      ],
+      "timeFrom": null,
+      "timeShift": null,
+      "title": "Appliance Version",
+      "transform": "timeseries_to_rows",
       "type": "table"
     },
     {
@@ -217,7 +321,7 @@
         "h": 11,
         "w": 12,
         "x": 0,
-        "y": 10
+        "y": 8
       },
       "hiddenSeries": false,
       "id": 4,
@@ -261,7 +365,8 @@
           "fill": true,
           "line": true,
           "op": "gt",
-          "value": 0
+          "value": 0,
+          "yaxis": "left"
         }
       ],
       "timeFrom": null,
@@ -359,20 +464,20 @@
         "h": 11,
         "w": 12,
         "x": 12,
-        "y": 10
+        "y": 8
       },
       "hiddenSeries": false,
       "id": 2,
       "legend": {
         "alignAsTable": true,
         "avg": false,
-        "current": false,
+        "current": true,
         "max": false,
         "min": false,
-        "rightSide": true,
+        "rightSide": false,
         "show": true,
         "total": false,
-        "values": false
+        "values": true
       },
       "lines": true,
       "linewidth": 1,
@@ -402,7 +507,8 @@
           "fill": true,
           "line": true,
           "op": "gt",
-          "value": 0
+          "value": 0,
+          "yaxis": "left"
         }
       ],
       "timeFrom": null,
@@ -455,7 +561,40 @@
     "provisioned"
   ],
   "templating": {
-    "list": []
+    "list": [
+      {
+        "allValue": null,
+        "current": {
+          "text": "skip.packnot.com",
+          "value": "skip.packnot.com"
+        },
+        "datasource": "Prometheus",
+        "definition": "appliance_major_version",
+        "hide": 0,
+        "includeAll": false,
+        "index": -1,
+        "label": null,
+        "multi": false,
+        "name": "target",
+        "options": [
+          {
+            "selected": true,
+            "text": "skip.packnot.com",
+            "value": "skip.packnot.com"
+          }
+        ],
+        "query": "appliance_major_version",
+        "refresh": 0,
+        "regex": "/.*target=\"([^\"]*).*/",
+        "skipUrlSync": false,
+        "sort": 0,
+        "tagValuesQuery": "",
+        "tags": [],
+        "tagsQuery": "",
+        "type": "query",
+        "useTags": false
+      }
+    ]
   },
   "time": {
     "from": "now-6h",
@@ -481,5 +620,6 @@
   "variables": {
     "list": []
   },
-  "version": 5
+  "version": 7
 }
+
