--- a/grafana/provisioning/dashboards/AppGate Dashoard.json
+++ b/grafana/provisioning/dashboards/AppGate Dashoard.json
@@ -15,8 +15,8 @@
   "editable": true,
   "gnetId": null,
   "graphTooltip": 0,
-  "id": 4,
-  "iteration": 1587542280526,
+  "id": 3,
+  "iteration": 1588625374098,
   "links": [],
   "panels": [
     {
@@ -77,7 +77,7 @@
         "showThresholdLabels": false,
         "showThresholdMarkers": false
       },
-      "pluginVersion": "6.7.2",
+      "pluginVersion": "6.7.3",
       "targets": [
         {
           "expr": "100 * count(appliance_status_online{online=\"true\", target=\"$target\", role_controller=\"true\"})  / count(appliance_status_online{ target=\"$target\", role_controller=\"true\"}) ",
@@ -156,6 +156,7 @@
       "targets": [
         {
           "expr": "sum(controller_count{target=\"$target\"})",
+          "instant": true,
           "interval": "",
           "legendFormat": "controller",
           "refId": "A"
@@ -240,6 +241,8 @@
       "targets": [
         {
           "expr": "sum(appliance_count{target=\"$target\"})",
+          "instant": true,
+          "interval": "",
           "legendFormat": "Appliances",
           "refId": "A"
         }
@@ -435,7 +438,6 @@
       "dashboardFilter": "",
       "dashboardTags": [],
       "datasource": null,
-      "folderId": null,
       "gridPos": {
         "h": 16,
         "w": 5,
@@ -946,7 +948,7 @@
         "showThresholdLabels": false,
         "showThresholdMarkers": false
       },
-      "pluginVersion": "6.7.2",
+      "pluginVersion": "6.7.3",
       "targets": [
         {
           "expr": "100 * count(appliance_status_online{online=\"true\", target=\"$target\", role_gateway=\"true\"})  / count(appliance_status_online{ target=\"$target\", role_gateway=\"true\"}) ",
@@ -1025,6 +1027,7 @@
       "targets": [
         {
           "expr": "sum(gateway_count{})",
+          "instant": true,
           "interval": "",
           "legendFormat": "gateways",
           "refId": "A"
@@ -1192,7 +1195,7 @@
         "showThresholdLabels": false,
         "showThresholdMarkers": false
       },
-      "pluginVersion": "6.7.2",
+      "pluginVersion": "6.7.3",
       "targets": [
         {
           "expr": "100 * count(appliance_status_online{online=\"true\", target=\"$target\", role_logserver=\"true\"})  / count(appliance_status_online{ target=\"$target\", role_logserver=\"true\"}) ",
@@ -1269,6 +1272,8 @@
       "targets": [
         {
           "expr": "sum(logserver_count{target=\"$target\"})",
+          "instant": true,
+          "interval": "",
           "legendFormat": "logserver",
           "refId": "A"
         }
@@ -1454,7 +1459,7 @@
         "showThresholdLabels": false,
         "showThresholdMarkers": false
       },
-      "pluginVersion": "6.7.2",
+      "pluginVersion": "6.7.3",
       "targets": [
         {
           "expr": "100 * count(appliance_status_online{online=\"true\", target=\"$target\", role_iotconnector=\"true\"})  / count(appliance_status_online{ target=\"$target\", role_iotconnector=\"true\"}) ",
@@ -1533,6 +1538,8 @@
       "targets": [
         {
           "expr": "sum(iotconnector_count{target=\"$target\"})",
+          "instant": true,
+          "interval": "",
           "legendFormat": "IOTcon",
           "refId": "A"
         }
@@ -1694,10 +1701,7 @@
     "list": [
       {
         "allValue": null,
-        "current": {
-          "text": "skip.packnot.com",
-          "value": "skip.packnot.com"
-        },
+        "current": {},
         "datasource": "Prometheus",
         "definition": "appliance_major_version",
         "hide": 0,
@@ -1706,13 +1710,7 @@
         "label": null,
         "multi": false,
         "name": "target",
-        "options": [
-          {
-            "selected": true,
-            "text": "skip.packnot.com",
-            "value": "skip.packnot.com"
-          }
-        ],
+        "options": [],
         "query": "appliance_major_version",
         "refresh": 0,
         "regex": "/.*target=\"([^\"]*).*/",
