--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,8 +12,7 @@ global:
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
   - 'alert.rules'
-  - 'appgate.rules'
-  - 'conkolla.rules'
+  - 'recording.rules'
 
 
 # alert
